@@ -3523,6 +3523,69 @@ block|}
 if|if
 condition|(
 operator|!
+name|getIvy
+argument_list|()
+operator|.
+name|getStatusManager
+argument_list|()
+operator|.
+name|isStatus
+argument_list|(
+name|md
+operator|.
+name|getStatus
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|Message
+operator|.
+name|error
+argument_list|(
+literal|"\t"
+operator|+
+name|getName
+argument_list|()
+operator|+
+literal|": bad status found in "
+operator|+
+name|ivyRef
+operator|.
+name|getResource
+argument_list|()
+operator|+
+literal|": '"
+operator|+
+name|md
+operator|.
+name|getStatus
+argument_list|()
+operator|+
+literal|"'"
+argument_list|)
+expr_stmt|;
+name|errors
+operator|.
+name|append
+argument_list|(
+literal|"bad status: '"
+operator|+
+name|md
+operator|.
+name|getStatus
+argument_list|()
+operator|+
+literal|"'; "
+argument_list|)
+expr_stmt|;
+name|ok
+operator|=
+literal|false
+expr_stmt|;
+block|}
+if|if
+condition|(
+operator|!
 name|ok
 condition|)
 block|{
