@@ -1,0 +1,10 @@
+<ivy-module version="1.0"> 
+	<info organisation="org1"
+	       module="mod1.4"
+	       revision="1.1"
+	       status="release"
+	/>
+	<dependencies>
+		<dependency org="orgfailure" name="modfailure" rev="1.1"/>
+	</dependencies>
+</ivy-module>
